# yetanothermathlib

./: .gitignore  CMakeLists.txt  install.sh  tests.cpp
headers/: Angle.h  Mat2.h  Mat3.h  Vec2.h  Vec3.h  libsenmath.h
include/: math.h  mymath.h
old/: tests.cpp.old
src/: Angle.cpp  Mat2.cpp  Mat3.cpp  Vec2.cpp  Vec3.cpp
tests/: CMakeLists.txt  tests.cpp
